--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,111 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 #hero {
-    background: linear-gradient(rgba(0,0,0,0.3), #26506E), url(images/st-petersburg.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), #26506e),
+    url(images/st-petersburg.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  background-attachment: fixed;
 }
 
 .hero-text img {
-    width: 100px;
-    position: absolute;
-    top: 4%;
-    left: 5%;
+  width: 100px;
+  position: absolute;
+  top: 4%;
+  left: 5%;
 }
 
 .hero-text {
-    text-align: center;
-    padding-top: 180px;
-    color: #fff;
+  text-align: center;
+  padding-top: 250px;
+  color: #fff;
 }
 
 .hero-text h1 {
-    font-size: 100px;
-    font-family: 'Kaushan Script', cursive;
+  font-size: 100px;
+  font-family: 'Kaushan Script', cursive;
+  margin-bottom: 30px;
 }
 
 .hero-text p {
-    font-size: 20px;
-    font-style: italic;
+  font-size: 20px;
+  font-style: italic;
 }
 
 .hero-btn {
-    margin: 70px auto 0;
+  margin: 90px auto 0;
 }
 
 .hero-btn a {
-    width: 150px;
-    text-decoration: none;
-    padding: 12px 30px;
-    color: #fff;
-    border: .5px solid #fff;
-    position: relative;
-    z-index: 1;
-    transition: color 0.5s;
+  width: 150px;
+  text-decoration: none;
+  padding: 12px 30px;
+  color: #fff;
+  border: 0.5px solid #fff;
+  position: relative;
+  z-index: 1;
+  transition: color 0.5s;
 }
 
 .hero-btn a span {
-    width: 0;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #fff;
-    z-index: -1;
-    transition: 0.5s ease-in-out;
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: -1;
+  transition: 0.5s ease-in-out;
 }
 
 .hero-btn a:hover span {
-    width: 100%;
+  width: 100%;
 }
 
 .hero-btn a:hover {
-    color: #000;
+  color: #000;
 }
 
 @media screen and (max-width: 600px) {
-    .hero-text h1 {
-        font-size: 50px;
-    }
-    .hero-text p {
-        font-size: 16px;
-    }
+  .hero-text h1 {
+    font-size: 50px;
+    margin: 0 20px 30px;
+  }
+  .hero-text p {
+    font-size: 16px;
+    margin: 0 30px;
+  }
+}
+
+/* ------ About Me Section ------ */
+
+#about {
+  width: 100%;
+  height: 100%;
+  /* background-color: #4981a5; */
+}
+
+.about-title {
+    width: 90%;
+    margin: auto;
+    padding: 60px 30px 40px;
+}
+
+.projects-container {
+    width: 90%;
+    margin: 40px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.projects-container img {
+    width: 800px;
+    margin: 10px auto;
 }
